--- a/fe/src/app/employee/schedule/schedule.component.html
+++ b/fe/src/app/employee/schedule/schedule.component.html
@@ -4,7 +4,7 @@
       <!-- Card stats -->
       <div class="row">
         <div class="col-xl-4 col-lg-6">
-          <div class="card card-stats mb-4 mb-xl-0">
+          <div class="card-search card-stats mb-4 mb-xl-0" style="margin-bottom: 2.75rem !important;">
             <div class="card-body">
               <div class="row">
                 <div class="col search-emp">
@@ -13,13 +13,6 @@
                     <input #serviceName id="serviceName" placeholder="Booking #1" [(ngModel)]="name" type="text"
                       aria-describedby="serviceName-help" maxlength="50">
                   </div>
-
-                  <!-- <div class="search-date">
-                    <h5 class="card-title text-uppercase text-muted mb-0 font14">Ngày làm</h5>
-                    <input placeholder="Booking #1" [(ngModel)]="date" type="text"
-                      aria-describedby="date-help" maxlength="50">
-                  </div> -->
-
                 </div>
 
                 <div class="col-auto">
@@ -170,7 +163,7 @@
                 </td>
                 <td class="text-center">
                   <div>
-                    <a class="dropdown-item" href="/user-profile">Xem thông tin</a>
+                    <a class="dropdown-item" href="/hms/user-profile">Xem thông tin</a>
                   </div>
                 </td>
               </tr>
