--- a/fe/src/app/sections/home-section/home-section.component.html
+++ b/fe/src/app/sections/home-section/home-section.component.html
@@ -101,7 +101,7 @@
     </svg>
   </div> -->
 </section>
-<section class="section section-lg">
+<section class="section bg-secondary" style="margin-bottom: 4rem; margin-top: 4rem;">
   <div class="container">
     <div class="row mb-lg-5">
       <div class="col-lg-8">
