--- a/fe/src/app/shared/navbar/navbar.component.html
+++ b/fe/src/app/shared/navbar/navbar.component.html
@@ -1,194 +1,9 @@
-<!-- Màn hình guest/customer -->
-<nav *ngIf="customerNavbar || guestNavbar" id="navbar-main"
-  class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom headroom--top headroom--pinned">
-  <div class="container">
-    <a class="navbar-brand mr-lg-5" [routerLink]="['/home']">
-      <img src="./assets/img/brand/argon-white.png">
-    </a>
-    <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed"
-      [attr.aria-expanded]="!isCollapsed" aria-controls="navbar_global">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="navbar-collapse collapse" id="navbar_global" [ngbCollapse]="isCollapsed">
-      <div class="navbar-collapse-header">
-        <div class="row">
-          <div class="col-6 collapse-brand">
-            <a [routerLink]="['/home']">
-              <img src="./assets/img/brand/blue.png">
-            </a>
-          </div>
-          <div class="col-6 collapse-close">
-            <button type="button" class="navbar-toggler" (click)="isCollapsed = !isCollapsed"
-              [attr.aria-expanded]="!isCollapsed" aria-controls="navbar_global">
-              <span></span>
-              <span></span>
-            </button>
-          </div>
-        </div>
-      </div>
-      <ul class="navbar-nav navbar-nav-hover align-items-lg-center">
-
-        <li class="nav-item dropdown">
-          <a class="nav-link no-caret" data-toggle="dropdown" role="button">
-            <i class="ni ni-collection d-lg-none"></i>
-            <span class="nav-link-inner--text" [routerLink]="['/introduction']">Trang chủ</span>
-          </a>
-          <!-- <div class="dropdown-menu">
-            <a [routerLink]="['/introduction']" class="dropdown-item">Giới thiệu</a>
-            <a [routerLink]="['/customer-profile']" class="dropdown-item">Thông tin cá nhân</a>
-            <a [routerLink]="['/login']" class="dropdown-item">Đăng nhập</a>
-            <a [routerLink]="['/register']" class="dropdown-item">Đăng ký</a>
-          </div> -->
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link no-caret" data-toggle="dropdown" role="button">
-            <i class="ni ni-ui-04 d-lg-none"></i>
-            <span class="nav-link-inner--text">Dịch vụ</span>
-          </a>
-          <div class="dropdown-menu-xl dropdown-menu">
-            <div class="dropdown-menu-inner">
-              <a routerLinkActive="active" [routerLink]="['/introduction']"
-                class="media d-flex align-items-center">
-                <div class="icon icon-shape bg-gradient-primary rounded-circle text-white">
-                  <i class="ni ni-spaceship"></i>
-                </div>
-                <div class="media-body ml-3">
-                  <h6 class="heading text-primary mb-md-1">Tổng vệ sinh</h6>
-                  <p class="description d-none d-md-inline-block mb-0">Cung cấp tiện ích tối ưu cho nhu cầu vệ sinh của
-                    người dùng.</p>
-                </div>
-              </a>
-              <a routerLinkActive="active" [routerLink]="['documentation/colors']"
-                class="media d-flex align-items-center">
-                <div class="icon icon-shape bg-gradient-success rounded-circle text-white">
-                  <i class="ni ni-palette"></i>
-                </div>
-                <div class="media-body ml-3">
-                  <h6 class="heading text-primary mb-md-1">Giúp việc theo giờ</h6>
-                  <p class="description d-none d-md-inline-block mb-0">Dịch vụ hỗ trợ vệ sinh, giúp việc theo thời gian
-                    thuê.</p>
-                </div>
-              </a>
-              <a routerLinkActive="active" [routerLink]="['documentation/alerts']"
-                class="media d-flex align-items-center">
-                <div class="icon icon-shape bg-gradient-warning rounded-circle text-white">
-                  <i class="ni ni-ui-04"></i>
-                </div>
-                <div class="media-body ml-3">
-                  <h5 class="heading text-warning mb-md-1">Giúp việc tại gia</h5>
-                  <p class="description d-none d-md-inline-block mb-0">Thuê người giúp việc tại gia, hỗ trợ tối đa nhu
-                    cầu theo yêu cầu cá nhân.</p>
-                </div>
-              </a>
-            </div>
-          </div>
-        </li>
-      </ul>
-      <ul class="navbar-nav align-items-lg-center ml-lg-auto">
-        <li class="nav-item">
-          <a class="nav-link nav-link-icon" href="https://www.facebook.com" target="_blank" data-toggle="tooltip"
-            title="HMS's Facebook">
-            <i class="fa fa-facebook-square"></i>
-            <span class="nav-link-inner--text d-lg-none">Facebook</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link nav-link-icon" href="https://www.instagram.com" target="_blank" data-toggle="tooltip"
-            title="HMS's Instagram">
-            <i class="fa fa-instagram"></i>
-            <span class="nav-link-inner--text d-lg-none">Instagram</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link nav-link-icon" href="https://twitter.com" target="_blank" data-toggle="tooltip"
-            title="Twitter">
-            <i class="fa fa-twitter-square"></i>
-            <span class="nav-link-inner--text d-lg-none">Twitter</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link nav-link-icon" href="" target="_blank" data-toggle="tooltip" title="Thông báo">
-            <i class="fa fa-bell"></i>
-            <span class="nav-link-inner--text d-lg-none">Thông báo</span>
-          </a>
-        </li>
-        <li *ngIf="guestNavbar" class="nav-item d-none d-lg-block ml-lg-4">
-          <a [routerLink]="['/register']" target="_blank"
-            class="btn btn-neutral btn-icon">
-            <span class="btn-inner--icon">
-              <i class="fa fa-key mr-2"></i>
-            </span>
-            <span class="nav-link-inner--text">Đăng ký </span>
-          </a>
-        </li>
-        <li *ngIf="guestNavbar" class="nav-item d-none d-lg-block ml-lg-4">
-          <a [routerLink]="['/login']" target="_blank"
-            class="btn btn-neutral btn-icon">
-            <span class="btn-inner--icon">
-              <i class="fa fa-lock mr-2"></i>
-            </span>
-            <span class="nav-link-inner--text" >Đăng nhập</span>
-          </a>
-        </li>
-        <li *ngIf="guestNavbar" class="nav-item">
-          <a class="nav-link nav-link-icon" href="" target="_blank" data-toggle="tooltip" title="Star us on Github">
-            <i class="fa fa-user"></i>
-            <span class="nav-link-inner--text d-lg-none">Người dùng</span>
-          </a>
-        </li>
-        <li *ngIf="customerNavbar" class="nav-item" ngbDropdown placement="bottom-right">
-          <a class="nav-link pr-0" role="button" ngbDropdownToggle>
-            <div class="media align-items-center">
-              <span class="avatar avatar-sm rounded-circle">
-                <img alt="Image placeholder" src="assets/img/theme/team-4-800x800.jpg">
-              </span>
-              <div class="media-body ml-2 d-none d-lg-block">
-                <span class="mb-0 text-sm  font-weight-bold">{{username}}</span>
-              </div>
-            </div>
-          </a>
-          <div class="dropdown-menu-arrow dropdown-menu-right" ngbDropdownMenu>
-            <div class=" dropdown-header noti-title">
-              <h6 class="text-overflow m-0">Welcome!</h6>
-            </div>
-            <a routerLinkActive="active" [routerLink]="['/customer-profile']" class="dropdown-item">
-              <i class="ni ni-single-02"></i>
-              <span>Xem thông tin</span>
-            </a>
-            <a routerLinkActive="active" [routerLink]="['/customer-schedule']" class="dropdown-item">
-              <i class="ni ni-calendar-grid-58"></i>
-              <span>Xem lịch đẵ đặt</span>
-            </a>
-            <a routerLinkActive="active" [routerLink]="['/customer-history']" class="dropdown-item">
-              <i class="ni ni-calendar-grid-58"></i>
-              <span>Xem lịch sử đặt hàng</span>
-            </a>
-            <a routerLinkActive="active" [routerLink]="['/change-pass']" class="dropdown-item">
-              <i class="fas fa-lock"></i>
-              <span>Đổi mật khẩu</span>
-            </a>
-            <a routerLinkActive="active" [routerLink]="['/support']" class="dropdown-item">
-              <i class="ni ni-support-16"></i>
-              <span>Liên hệ & Hỗ trợ</span>
-            </a>
-            <div class="dropdown-divider"></div>
-            <a (click)="logout()" class="dropdown-item">
-              <i class="ni ni-user-run"></i>
-              <span>Đăng xuất</span>
-            </a>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
 
 <!-- NAVBAR - ADMIN / Quản lý -->
 <nav *ngIf="adminNavbar || cleanerNavbar" class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
   <div class="container-fluid">
     <!-- Brand -->
-    <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" routerLinkActive="active"
-      [routerLink]="['/dashboard']">{{getTitle()}}</a>
+    <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block">{{getTitle()}}</a>
     <!-- Form -->
     <form class="navbar-search navbar-search-dark form-inline mr-3 d-none d-md-flex ml-lg-auto">
       <div class="form-group mb-0" [ngClass]="{ 'focused': focus === true }">
