--- a/fe/src/app/booking/calendar-dialog/calendar-dialog.html
+++ b/fe/src/app/booking/calendar-dialog/calendar-dialog.html
@@ -20,9 +20,9 @@
                 </div>
                 <div class="input-group">
                   <p>Thời gian định kỳ(*): </p>
-                  <select [(ngModel)]="selectedServicePackageId" id="serviceType" aria-describedby="serviceType-help"
+                  <select [(ngModel)]="selectedServicePackageId" (ngModelChange)="selectedPackage($event)" id="serviceType" aria-describedby="serviceType-help"
                     title="Thời gian định kỳ">
-                    <option *ngFor="let package of servicePackages" [value]="package">{{ package }}</option>
+                    <option *ngFor="let package of servicePackages" [value]="package.id">{{ package.title }}</option>
                   </select>
                 </div>
                 <div class="input-group">
