--- a/fe/src/app/employee/schedule/schedule.component.scss
+++ b/fe/src/app/employee/schedule/schedule.component.scss
@@ -1593,3 +1593,16 @@
     }
   }
 }
+
+.card-search{
+  position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    border: 1px solid rgba(0,0,0,.05);
+    border-radius: 0.375rem;
+    background-color: #fff;
+    background-clip: border-box;
+    padding: 0.75rem;
+}
