--- a/fe/src/app/shared/navbar/navbar.component.html
+++ b/fe/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 
 <!-- NAVBAR - ADMIN / Quản lý -->
-<nav *ngIf="adminNavbar || cleanerNavbar" class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
+<nav *ngIf="managerNavbar || adminNavbar || cleanerNavbar" class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
   <div class="container-fluid">
     <!-- Brand -->
     <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block">{{getTitle()}}</a>
