--- a/fe/src/app/booking/calendar-dialog/calendar-dialog.html
+++ b/fe/src/app/booking/calendar-dialog/calendar-dialog.html
@@ -25,10 +25,9 @@
                     <option *ngFor="let package of servicePackages" [value]="package">{{ package }}</option>
                   </select>
                 </div>
-                <div class="input-group">
+                <!-- <div class="input-group">
                   <p>Giờ bắt đầu(*): </p>
                   <div>
-                    <!-- Sử dụng trường input kiểu số -->
                     <input type="tel" name="time" id="time" [class.red_border]="c_time"
                       [class.red_border_no_background]="c_time && (_inTime.length === 0 || _inTime.trim().length === 0)"
                       (blur)="blurExpDate(time)" pattern="\d*" placeholder="08:30" [(ngModel)]="_inTime" #time
@@ -37,7 +36,7 @@
                   <div *ngIf="c_time" style="width: 100%;" class="error">Vui lòng nhập thời gian trong khoảng 8h sáng
                     tới trước 8h tối.</div>
 
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="calender-pick-info" *ngIf="pickServiceType != 1 && dateArray && dateArray.length > 0">
